--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 
 <body>
     <a href="./Homework/Web Charting/index.html">Earthquakes</a>
+  <a href="./Homework/14-d3/Index.html">Access to Healthcare by Poverty States</a>
 </body>
 </html>
