--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
     <a href="./Homework/Web Charting/index.html">Earthquakes</a>
   <a href="./Homework/14-d3/Index.html">Access to Healthcare by Poverty States</a>
-  <a href="./Homework/14-d3/Index.html">Access to Healthcare by Poverty States</a>
+  <a href="./Homework/Social Analytics/Index.html">Access to Healthcare by Poverty States</a>
 </body>
 </html>
