--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <a href="./Homework/Web Charting/index.html">Earthquakes</a>
   <a href="./Homework/14-d3/Index.html">Access to Healthcare by Poverty States</a>
-  <a href="./Homework/Social Analytics/Index.html">Twitter Social Analytics: News Sources</a>
+  <a href="./Homework/Social Analytics/News Mood.ipynb">Twitter Social Analytics: News Sources</a>
   <a href="./Homework/Tableau - 16/Bike Tableau Homework.pdf">NYC Bike Rental Analysis</a>
  
 </body>
