--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <a href="./Homework/Web Charting/index.html">Earthquakes</a>
   <a href="./Homework/14-d3/Index.html">Access to Healthcare by Poverty States</a>
   <a href="./Homework/Social Analytics/News Mood.html">Twitter Social Analytics: News Sources</a>
-  <a href="./Homework/Github HTML and CSS/index.html">Twitter Social Analytics: News Sources</a>
+  <a href="./Homework/Github HTML and CSS/index.html">Variance is weather in relationship to altitude</a>
   <a href="./Homework/Tableau - 16/Bike Tableau Homework.pdf">NYC Bike Rental Analysis</a>
  
 </body>
